--- a/index.html
+++ b/index.html
@@ -5,21 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>my project</title>
   <link rel="stylesheet" href="style.css"> 
-</head>
+</head> 
 <body>
    <!--- <h1>simple</h1>
   
-  <button onclick="showError()">Show Error</button>
+  <button onclick="showError()">Show Error</button>           Initial commit"
   <button onclick="showOk()">It's OK</button>-->
-  <header>
-    <h1>simple</h1> 
- 
-<div class="container">
-    <button id="button1">button 1</button>
-    <button id="button2">button 2</button>
-</div>
-</header> 
+  
 
-    <script src="index.js"></script>
+    
+  <header>
+    <h1>Hello!</h1> 
+ 
+
+<div class="container">
+   <!---- <button id="button1">Live</button>---->
+   <button onclick="showError()">Live</button>
+   <button onclick="Good()">new</button>
+   <!--- <button id="button2">New</button>-->
+     
+   
+</div>
+</header>
+<div id="message"></div>
+
+
+
+ 
+
+    <script src="script.js"></script>
 </body>
 </html>
